--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -6,7 +6,9 @@
 
 Portal Akademik Mahasiswa atau dikenal sebagai Student Portal UNPAR\cite{studentportalunpar} merupakan sistem informasi berbasis web yang digunakan oleh mahasiswa Universitas Katolik Parahyangan. Beberapa fitur yang dimiliki Portal Akademik Mahasiswa antara lain rencana studi, jadwal, nilai dan indeks prestasi, dan pembayaran uang kuliah. Namun, fitur-fitur tersebut masih belum cukup untuk mendukung kebutuhan akademik mahasiswa Program Studi Teknik Informatika. 
 
-Salah satu fitur yang diperlukan oleh mahasiswa Teknik Informatika UNPAR adalah prasyarat mata kuliah. Dalam kurikulum Teknik Informatika UNPAR, terdapat beberapa mata kuliah yang membutuhkan prasyarat baik prasyarat tempuh maupun prasyarat lulus. Portal Akademik Mahasiswa sudah menyediakan fitur prasyarat mata kuliah namun kurang mendukung karena data yang ditampilkan kurang akurat. Misalnya, pengambilan mata kuliah ``AIF453 Kecerdasan Bisnis'' membutuhkan prasyarat lulus mata kuliah ``AIF204 Manajemen Informasi dan Basis Data'' atau lulus mata kuliah ``AIF102 Algoritma dan Struktur Data'' dengan IPK di atas 2.75 (Gambar \ref{fig:1_prasyarat_tinyurl}). Namun dalam Portal Akademik Mahasiswa, prasyarat yang dicantumkan hanya lulus mata kuliah ``AIF204 Manajemen Informasi dan Basis Data'' (Gambar \ref{fig:1_prasyarat_student_portal}). Selain itu, pemeriksaan prasyarat mata kuliah tidak dilakukan secara otomatis sehingga setiap pengambilan mata kuliah tetap dianggap valid meskipun belum memenuhi prasyarat.
+Salah satu fitur yang diperlukan oleh mahasiswa Teknik Informatika UNPAR adalah pemeriksaan prasyarat mata kuliah. Dalam kurikulum Teknik Informatika UNPAR, terdapat beberapa mata kuliah yang membutuhkan prasyarat baik prasyarat tempuh maupun prasyarat lulus. Portal Akademik Mahasiswa sudah menyediakan fitur prasyarat mata kuliah namun kurang mendukung karena data yang ditampilkan kurang akurat. Misalnya, pengambilan mata kuliah ``AIF453 Kecerdasan Bisnis'' membutuhkan prasyarat lulus mata kuliah ``AIF204 Manajemen Informasi dan Basis Data'' atau lulus mata kuliah ``AIF102 Algoritma dan Struktur Data'' dengan IPK di atas 2.75 (Gambar \ref{fig:1_prasyarat_tinyurl}). Namun dalam Portal Akademik Mahasiswa, prasyarat yang dicantumkan hanya lulus mata kuliah ``AIF204 Manajemen Informasi dan Basis Data'' (Gambar \ref{fig:1_prasyarat_student_portal}). Selain itu, pemeriksaan prasyarat mata kuliah tidak dilakukan secara otomatis sehingga setiap pengambilan mata kuliah tetap dianggap valid meskipun belum memenuhi prasyarat. Dengan adanya fitur pemeriksaan prasyarat mata kuliah, mahasiswa dapat mengetahui apakah mahasiswa tersebut sudah dapat menempuh mata kuliah yang dibuka.
+
+Fitur berikutnya yang diperlukan mahasiswa adalah jadwal kuliah yang tersusun dan terurut berdasarkan hari. Saat ini, jadwal kuliah pada Portal Akademik mahasiswa tidak terurut berdasarkan hari sehingga mahasiswa harus melakukan rekapitulasi lagi. Selanjutnya adalah ringkasan data akademik. Fitur tersebut menampilkan data-data akademik seperti IPS dan IPK yang lebih ter-\textit{update}, sisa SKS untuk kelulusan, dan status kelulusan mata kuliah pilihan wajib. Dengan adanya fitur ringkasan data akademik mahasiswa dapat menyusun perkuliahannya untuk mencapai kelulusan. Fitur yang terakhir adalah aplikasi yang sama jika diakses dari sistem operasi selain Windows seperti Mac, Linux, dan Android. Jika Portal Akademik Mahasiswa diakses dari sistem operasi selain Windows, maka situs web yang ditampilkan adalah Portal Akademik Mahasiswa versi \textit{mobile} dengan fitur yang lebih sedikit dari Portal Akademik Mahasiswa sehingga mahasiswa tidak dapat menggunakan fitur lainnya. Informatika Student Portal dibuat agar bisa memberikan fitur-fitur yang sama dalam sistem operasi Mac, Linux, dan Android.   
 
 \textit{Library} jsoup\cite{jsoup} merupakan \textit{library} Java yang digunakan untuk menelusuri suatu situs web untuk mendapatkan suatu informasi. Informasi yang didapat berupa HTML yang kemudian diekstrak dan disajikan dalam bentuk \textit{Document Object Model}. Play Framework\cite{Leroux:2014} merupakan sebuah \textit{web framework} berbasis Java dan Scala. Play juga menggunakan arsitektur \textit{Model-View-Controller} (MVC) di mana \textit{model} dan \textit{controller} menggunakan bahasa Java sedangkan \textit{view} menggunakan bahasa Scala dan HTML. SIA Models\cite{siamodels} merupakan kelas-kelas dalam bahasa Java yang merepresentasikan Sistem Informasi Akademik Teknik Informatika UNPAR. Aplikasi akan dibuat dengan menggunakan Play Framework dan jsoup karena aplikasi didukung oleh SIA Models yang tersedia dalam bahasa Java. 
 
@@ -85,7 +87,7 @@ Sistematika penulisan setiap bab pada skripsi ini adalah sebagai berikut:
   Bab 2 berisikan teori-teori yang digunakan dalam pembuatan skripsi ini. Teori
   yang digunakan yaitu \textit{library} jsoup, Chrome DevTools, Play Framework, SIA Models, dan CSS \textit{selector}.
   \item Bab Analisis \\
-  Bab 3 berisikan analisis yang dilakukan pada skripsi ini, meliputi analisis Portal Akademik Mahasiswa, analisis kebutuhan Informatika Student Portal, analisis komunikasi Portal Akademik Mahasiswa untuk fitur Informatika Student Portal, analisis \textit{use case} meliputi diagram \textsl{use case} dan skenario, serta analisis kelas. 
+  Bab 3 berisikan analisis yang dilakukan pada skripsi ini, meliputi analisis sistem kini dan analisis sistem usulan meliputi, analisis kebutuhan Informatika Student Portal, analisis komunikasi Portal Akademik Mahasiswa untuk fitur Informatika Student Portal, analisis \textit{use case} meliputi diagram \textsl{use case} dan skenario, serta analisis kelas. 
 	\item Bab Perancangan \\
   Bab 4 berisikan perancangan aplikasi, meliputi diagram kelas rinci beserta deskripsi kelas dan fungsinya dan perancangan antarmuka aplikasi. 
 	\item Bab Implementasi dan Pengujian \\
