--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -204,7 +204,7 @@ Panel-panel yang dimiliki DevTools (Gambar \ref{fig:2_chrome_devtools}) antara l
 	\item \textbf{Console}, mendapatkan informasi pengembangan dan berinteraksi dengan dokumen.
 	\item \textbf{Sources}, melakukan \textit{debugging} pada JavaScript dengan menentukan \textit{breakpoint}.
 	\item \textbf{Network}, memantau aktivitas jaringan pada situs web secara \textit{real-time}.
-	\item \textbf{Audits}, menganalisa halaman yang dimuat.
+	\item \textbf{Audits}, menganalisis halaman yang dimuat.
 	\item \textbf{Timeline}, menampilkan alur waktu saat memuat halaman.
 	\item \textbf{Profiles}, menggambarkan waktu eksekusi dan penggunaan memori saat memuat halaman.
 	\item \textbf{Resources}, memeriksa sumber daya halaman yang dapat berupa basis data, \textit{cookies}, dan \textit{cache}.
