Revisi pengujian eksperimental

--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -83,7 +83,7 @@ Pada halaman utama Portal Akademik Mahasiswa (Gambar \ref{fig:3_pam_home}), terd
 			\begin{figure}[H]
 				\centering
 				\includegraphics[scale=0.5]{Gambar/pam-utama-rencanastudi}
-				\caption{Tampilan Registrasi FRS/PRS} 
+				\caption{Tampilan Registrasi FRS/PRS\cite{BTI:2012}} 
 				\label{fig:3_pam_utama_registrasi}
 			\end{figure}
 			
@@ -92,7 +92,7 @@ Pada halaman utama Portal Akademik Mahasiswa (Gambar \ref{fig:3_pam_home}), terd
 			\begin{figure}[H]
 				\centering
 				\includegraphics[scale=0.5]{Gambar/pam-utama-krs}
-				\caption{Tampilan Kartu Rencana Studi\cite{BTI:2012}} 
+				\caption{Tampilan Kartu Rencana Studi} 
 				\label{fig:3_pam_utama_krs}
 			\end{figure}
 			
