--- a/doc/DokumenSkripsi/Bab/bab5.tex
+++ b/doc/DokumenSkripsi/Bab/bab5.tex
@@ -106,7 +106,46 @@ Bab ini terdiri atas dua bagian, yaitu Implementasi Perangkat Lunak dan Pengujia
 			\end{table}
 			
 		\subsection{Pengujian Eksperimental} 
-		Pengujian eksperimental dilakukan terhadap mahasiswa angkatan 2012 sampai 2015. Dari setiap angkatan, diambil tiga orang untuk melakukan pengujian. Setiap responden diminta untuk melakukan \textit{login} kemudian melihat data dari setiap halaman pada Portal Akademik Mahasiswa dan memastikan apakah data tersebut sudah sesuai dengan data sebenarnya. Responden menolak jika hasil pegujian diperlihatkan dengan alasan privasi, karena itu hasil pengujian dirangkum sebagai berikut:
+		Pengujian eksperimental dilakukan terhadap mahasiswa angkatan 2012 sampai 2015. Dari setiap angkatan, diambil tiga orang untuk melakukan pengujian. Setiap responden diminta untuk melakukan \textit{login} kemudian melihat data dari setiap halaman pada Portal Akademik Mahasiswa dan memastikan apakah data tersebut sudah sesuai dengan data sebenarnya. 
+		
+		Salah satu hasil pengujian eksperimental dapat dilihat pada Gambar \ref{fig:5_jadwal_if} yang menunjukkan jadwal kuliah mahasiswa pada Informatika Student Portal.  Kemudian jadwal kuliah mahasiswa pada Portal Akademik Mahasiswa dapat dilihat pada Gambar \ref{fig:5_jadwal_pam}. Hasil tersebut menunjukkan bahwa jadwal kuliah dari Informatika Student Portal sudah sesuai dengan jadwal kuliah pada Portal Akademik Mahasiswa. Hasil pengujian berikutnya adalah IPS dan IPK yang ter-\textit{update}. Gambar \ref{fig:5_riwayatIP_pam} menunjukkan riwayat IP sedangkan Gambar \ref{fig:5_riwayatNilai_pam} menunjukkan riwayat nilai pada Portal Akademik Mahasiswa. Meskipun seluruh nilai sudah keluar, namun IPK dan IPS belum ter-\textit{update}. Pada Informatika Student Portal, IPS, IPK, dan SKS lulus akan langsung dihitung jika ada nilai yang sudah keluar seperti yang ditunjukkan pada Gambar \ref{fig:5_ringkasan_IF}. 
+		
+		\begin{figure}[H]
+			\centering
+			\includegraphics[scale=0.34]{Gambar/jadwal_if_eksperimen}
+			\caption{Jadwal Kuliah Informatika Student Portal} 
+			\label{fig:5_jadwal_if}
+		\end{figure}
+		
+		\begin{figure}[H]
+			\centering
+			\includegraphics[scale=0.34]{Gambar/jadwal_pam_eksperimen}
+			\caption{Jadwal Kuliah Portal Akademik Mahasiswa} 
+			\label{fig:5_jadwal_pam}
+		\end{figure}
+		
+		\begin{figure}[H]
+			\centering
+			\includegraphics[scale=0.4]{Gambar/riwayatIP_pam_eksperimen}
+			\caption{Riwayat IP Portal Akademik Mahasiswa} 
+			\label{fig:5_riwayatIP_pam}
+		\end{figure}
+		
+		\begin{figure}[H]
+			\centering
+			\includegraphics[scale=0.4]{Gambar/riwayatNilai_pam_eksperimen}
+			\caption{Riwayat Nilai Portal Akademik Mahasiswa} 
+			\label{fig:5_riwayatNilai_pam}
+		\end{figure}
+		
+		\begin{figure}[H]
+			\centering
+			\includegraphics[scale=0.35]{Gambar/ringkasan_if_eksperimen}
+			\caption{Ringkasan Data Akademik Informatika Student Portal} 
+			\label{fig:5_ringkasan_IF}
+		\end{figure}
+		
+		Hasil pengujian eksperimental lainnya dirangkum sebagai berikut:
 		\begin{itemize}
 			\item Angkatan 2012\\
 			Saat melakukan pemeriksaan prasyarat, terdapat mahasiswa dengan status belum lulus mata kuliah ``AIF101 Pemrograman Berorientasi Objek''. Hal ini disebabkan oleh perubahan kurikulum pada tahun 2013. Kode mata kuliah Pemrograman Berorientasi Objek yang sudah ditempuh angkatan 2012 adalah AIF 191. ``AIF191 Pemrograman Berorientasi Objek'' merupakan hasil konversi mata kuliah ``AKS141 Dasar-dasar Pemrograman''\footnote{\url{http://tinyurl.com/lionov}<Kurikulum 2013><ATURAN KONVERSI 
